# deZent-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
data/anonymized_data/deZent/: cent_w_comm_zanon_z_1_dt_7260_nGw_5_distSm_normal_maxSm_20_seed_1.csv  (+16 more)
data/consumption_data/: SLA_g0_GewerbeAllg.csv  SLA_g1_bureaus_workshops.csv  SLA_g2_restaurants.csv  SLA_g3_GewerbeDurchlaufend.csv  SLA_g4_store_hairdresser.csv  SLA_g5_bakery.csv  SLA_g6_Wochenendbetrieb.csv  SLA_h0_Haushalt.csv  SLA_l0_Landwirtschaftsbetrieb.csv  SLA_l1_LandwirtschaftsbetriebMilchwirtschaft.csv  SLA_l2_LandwirtschaftsbetriebUebrige.csv
data_analysis/analyze_simulation/: analyze_simu_stats.py  extract_msg_cnt_tex.py  extract_pub_ratio_smtype_tex.py  extract_pub_ratio_tex.py  plot_collusion_prob.py
data_analysis/simulation_stats/: avg_msgcnt_gw_ce_per_scenario.csv  avg_msgcnt_gw_gw_per_scenario.csv  msg_cnt_analysis.csv  pub_ratio_analysis.csv  smtype_pub_ratio_analysis.csv
deZent/src/: central_entity.py  counting_bloom_filter.py  counting_data_structure.py  counting_dict.py  gateway.py  gw.py  logging_utils.py  main.py  network.py  node.py  profile_distribution.py  smartmeter.py  zNode.py  zanon.py  zanon_utils.py
deZent/src/ami/: central_entity.py  gateway.py  (+5 more)
jha_cent_zanon/: evaluate_category.py  study_output.py  test_zanon.py  utils.py  zanon.py
model_validation/: analyze_pub_diff.py  extract_pub_diff_tex.py  generate_tex_histogram.py  generate_tex_pubvstime.py
model_validation/data/: npub_diff.csv
scripts/: run_zanon_simu.sh
src/deZent_demo/: __main__.py
(+72 files in other folders)
